add quicksand web fonts

--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <title>Arnelle Balane</title>
 
+        <link rel="stylesheet" href="/static/stylesheets/fonts.css">
         <link rel="stylesheet" href="/static/stylesheets/base.css">
         <link rel="stylesheet" href="/static/stylesheets/landing.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700">
     </head>
 
     <body>
