--- a/views/index.html
+++ b/views/index.html
@@ -11,8 +11,16 @@
 
     <body>
         <div class="hero">
+            <img src="/static/images/avatar.jpg" alt="Arnelle Balane" class="hero__avatar">
             <h1 class="hero__text">Arnelle Balane</h1>
             <h2 class="hero__subtext">@arnellebalane</h2>
+
+            <div class="social-links">
+                <a href="#" class="social-link facebook">Facebook</a>
+                <a href="#" class="social-link twitter">Twitter</a>
+                <a href="#" class="social-link github">Github</a>
+                <a href="#" class="social-link website">Website</a>
+            </div>
         </div>
     </body>
 </html>
