--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+        <figure class="blury-background"></figure>
         <div class="hero">
             <img src="/static/images/avatar.jpg" alt="Arnelle Balane" class="hero__avatar">
             <h1 class="hero__text">Arnelle Balane</h1>
@@ -21,6 +22,7 @@
                 <a href="#" class="social-link github">Github</a>
                 <a href="#" class="social-link website">Website</a>
             </div>
+            <small class="copyright">&copy; 2016 Arnelle Balane</small>
         </div>
     </body>
 </html>
