open social links in new tab

--- a/views/index.html
+++ b/views/index.html
@@ -17,10 +17,10 @@
             <h2 class="hero__subtext">@arnellebalane</h2>
 
             <div class="social-links">
-                <a href="https://facebook.com/arnellebalane" class="social-link facebook">Facebook</a>
-                <a href="https://twitter.com/arnellebalane" class="social-link twitter">Twitter</a>
-                <a href="https://github.com/arnellebalane" class="social-link github">Github</a>
-                <a href="https://blog.arnelebalane.com" class="social-link website">Website</a>
+                <a href="https://facebook.com/arnellebalane" target="_blank" class="social-link facebook">Facebook</a>
+                <a href="https://twitter.com/arnellebalane" target="_blank" class="social-link twitter">Twitter</a>
+                <a href="https://github.com/arnellebalane" target="_blank" class="social-link github">Github</a>
+                <a href="https://blog.arnelebalane.com" target="_blank" class="social-link website">Website</a>
             </div>
             <small class="copyright">&copy; 2016 Arnelle Balane</small>
         </div>
