--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="/static/stylesheets/fonts.css">
         <link rel="stylesheet" href="/static/stylesheets/base.css">
         <link rel="stylesheet" href="/static/stylesheets/landing.css">
+
+        {% include 'partials/google-analytics.html' %}
     </head>
 
     <body>
