--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Arnelle Balane</title>
 
+        <link rel="icon shortcut" href="/static/images/favicon.ico">
         <link rel="stylesheet" href="/static/stylesheets/fonts.css">
         <link rel="stylesheet" href="/static/stylesheets/base.css">
         <link rel="stylesheet" href="/static/stylesheets/landing.css">
