--- a/static/stylesheets/landing.css
+++ b/static/stylesheets/landing.css
@@ -27,8 +27,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
-    font-size: 5vmin;
+    min-height: 100vh;
+    padding: 1em 0;
+    font-size: 8rem;
+    text-align: center;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
     color: #fff;
 }
@@ -60,6 +62,7 @@
 
 .social-links {
     display: flex;
+    margin-bottom: 2em;
 }
 
 
@@ -106,6 +109,6 @@
 /** copyright styles **/
 
 .copyright {
-    margin: auto 0 3em 0;
+    margin-top: auto;
     font-size: 0.25em;
 }
