--- a/static/stylesheets/landing.css
+++ b/static/stylesheets/landing.css
@@ -68,8 +68,9 @@
 
 .social-link {
     display: block;
-    width: 0.6em;
-    height: 0.6em;
+    width: 1.25em;
+    height: 1.25em;
+    margin: 0 0.25em;
     text-indent: 100vh;
     background: #fff center center no-repeat;
     background-size: 60%;
@@ -81,10 +82,6 @@
 .social-link:hover,
 .social-link:focus {
     transform: scale(1.15);
-}
-
-.social-link:not(:last-child) {
-    margin-right: 0.2em;
 }
 
 
