--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset="utf-8">
         <title>Arnelle Balane</title>
+
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="icon shortcut" href="/static/images/favicon.ico">
         <link rel="stylesheet" href="/static/stylesheets/fonts.css">
