--- a/static/stylesheets/landing.css
+++ b/static/stylesheets/landing.css
@@ -62,6 +62,8 @@
 
 .social-links {
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     margin-bottom: 2em;
 }
 
@@ -70,7 +72,7 @@
     display: block;
     width: 1.25em;
     height: 1.25em;
-    margin: 0 0.25em;
+    margin: 0.25em;
     text-indent: 100vh;
     background: #fff center center no-repeat;
     background-size: 60%;
