--- a/static/stylesheets/landing.css
+++ b/static/stylesheets/landing.css
@@ -40,8 +40,7 @@
     display: block;
     width: 4em;
     height: 4em;
-    margin: auto;
-    margin-bottom: 0;
+    margin-top: auto;
     border-radius: 50%;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
 }
@@ -67,12 +66,11 @@
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 2em;
-    text-align: center;
 }
 
 
 .social-link {
-    display: block;
+    display: inline-block;
     width: 1.25em;
     height: 1.25em;
     margin: 0.25em;
