--- a/views/index.html
+++ b/views/index.html
@@ -25,6 +25,8 @@
 
             body {
                 font-size: 1.6rem;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
                 background: url("/static/images/background.jpg") center center no-repeat;
                 background-size: cover;
             }
