--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -7,10 +7,20 @@
 }
 
 
+html {
+    font-size: 62.5%;
+}
+
+
 body {
     height: 100vh;
     font-family: "Quicksand", sans-serif;
+    font-size: 1.6rem;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     color: #333;
+    background: url("/static/images/background.jpg") center center no-repeat;
+    background-size: cover;
 }
 
 
@@ -18,4 +28,17 @@ a,
 button {
     font: inherit;
     color: inherit;
+}
+
+
+@media all and (min-width: 640px), (min-device-width: 640px) {
+    body {
+        background-image: url("/static/images/background@2x.jpg");
+    }
+}
+
+@media all and (min-width: 1280px), (min-device-width: 1280px) {
+    body {
+        background-image: url("/static/images/background@3x.jpg");
+    }
 }
