--- a/static/stylesheets/landing.css
+++ b/static/stylesheets/landing.css
@@ -7,13 +7,40 @@ body {
 /** hero styles **/
 
 .hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    min-height: 100vh;
+    padding: 1em 0;
+    font-size: 3rem;
+    text-align: center;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
     color: #fff;
 }
 
 
 .hero__avatar {
+    display: block;
+    width: 4em;
+    height: 4em;
+    margin-top: auto;
+    border-radius: 50%;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+}
+
+
+.hero__text {
+    margin-top: 0.5em;
+    margin-bottom: 0;
+    font-size: 1em;
+}
+
+
+.hero__subtext {
+    margin-top: 0;
+    margin-bottom: 1em;
+    font-size: 0.5em;
 }
 
 
@@ -32,11 +59,19 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    margin-bottom: 2em;
 }
 
 
 .social-link {
+    display: inline-block;
+    width: 1.25em;
+    height: 1.25em;
     margin: 0.25em;
+    text-indent: 100vh;
+    border-radius: 50%;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
     background: #fff center center no-repeat;
     background-size: 60%;
 }
@@ -77,5 +112,13 @@ body {
 /** copyright text styles **/
 
 .copyright {
-    font-size: 0.4em;
+    margin-top: auto;
+    font-size: 0.25em;
+}
+
+
+@media all and (min-device-width: 960px) {
+    .copyright {
+        font-size: 0.4em;
+    }
 }
