make app work even if offline with service workers

--- a/views/index.html
+++ b/views/index.html
@@ -30,5 +30,7 @@
             </div>
             <small class="copyright">&copy; 2016 Arnelle Balane</small>
         </div>
+
+        <script src="/static/javascripts/sw-register.js"></script>
     </body>
 </html>
