--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link rel="manifest" href="/static/manifest.json">
         <link rel="icon shortcut" href="/static/images/favicon.ico">
         <link rel="stylesheet" href="/static/stylesheets/fonts.css">
         <link rel="stylesheet" href="/static/stylesheets/base.css">
