--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
         <title>Arnelle Balane</title>
 
         <meta charset="utf-8">
+        <meta name="theme-color" content="#83bcb5">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="manifest" href="/static/manifest.json">
