--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <meta name="theme-color" content="#83bcb5">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Arnelle's personal blog about random tech and coding.">
 
         <link rel="manifest" href="/static/manifest.json">
         <link rel="icon shortcut" href="/static/images/favicon.ico">
