update manifest and favicon icons

--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Arnelle's personal blog about random tech and coding.">
 
         <link rel="manifest" href="/static/manifest.json">
-        <link rel="icon shortcut" href="/static/images/favicon.ico">
+        <link rel="icon shortcut" href="/static/images/favicon.png">
         <link rel="stylesheet" href="/static/stylesheets/fonts.css">
         <link rel="stylesheet" href="/static/stylesheets/base.css">
         <link rel="stylesheet" href="/static/stylesheets/landing.css">
