--- a/server/views/index.html
+++ b/server/views/index.html
@@ -26,10 +26,12 @@
             <h2 class="hero__subtext">@arnellebalane</h2>
 
             <div class="social-links">
-                <a href="https://facebook.com/arnellebalane" target="_blank" class="social-link facebook">Facebook</a>
-                <a href="https://twitter.com/arnellebalane" target="_blank" class="social-link twitter">Twitter</a>
-                <a href="https://github.com/arnellebalane" target="_blank" class="social-link github">Github</a>
-                <a href="https://blog.arnellebalane.com" target="_blank" class="social-link website">Website</a>
+                <a href="https://facebook.com/arnellebalane" target="_blank" title="Facebook" class="social-link facebook">Facebook</a>
+                <a href="https://twitter.com/arnellebalane" target="_blank" title="Twitter" class="social-link twitter">Twitter</a>
+                <a href="https://github.com/arnellebalane" target="_blank" title="Github" class="social-link github">Github</a>
+                <a href="http://stackoverflow.com/story/arnellebalane" target="_blank" title="StackOverflow" class="social-link stackoverflow">StackOverflow</a>
+                <a href="https://speakerdeck.com/arnellebalane" target="_blank" title="Speaker Deck" class="social-link speakerdeck">Speaker Deck</a>
+                <a href="https://blog.arnellebalane.com" target="_blank" title="Blog" class="social-link blog">Blog</a>
             </div>
             <small class="copyright">&copy; 2017 Arnelle Balane</small>
         </div>
