--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
 
         <title>Arnelle Balane</title>
+
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+        <link rel="stylesheet" href="static/stylesheets/main.css">
     </head>
 
     <body>
