--- a/views/index.html
+++ b/views/index.html
@@ -6,11 +6,16 @@
 
         <title>Arnelle Balane</title>
 
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
         <link rel="stylesheet" href="static/stylesheets/main.css">
     </head>
 
     <body>
-        <h1>Arnelle Balane</h1>
+        <main class="wrapper">
+            <header class="site-header">
+                <p>Hello, my name is</p>
+                <h1 class="title">Arnelle Balane</h1>
+                <p>I'm just another Web Developer</p>
+            </header>
+        </main>
     </body>
 </html>
