--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
 
         <title>Arnelle Balane</title>
 
+        <link rel="stylesheet" href="static/stylesheets/fonts.css">
         <link rel="stylesheet" href="static/stylesheets/main.css">
     </head>
 
