--- a/views/index.html
+++ b/views/index.html
@@ -17,6 +17,33 @@
                 <h1 class="title">Arnelle Balane</h1>
                 <p>I'm just another Web Developer</p>
             </header>
+
+            <p>Just like other developers, I write code. They're all scattered across the Internet, but you can find most of the cool ones in my <a href="https://github.com/arnellebalane" target="_blank" rel="noopener">Github profile</a>. Some of them are also in <a href="https://codepen.io/arnellebalane/" target="_blank" rel="noopener">Codepen</a>, and even on <a href="#">this site</a>.</p>
+
+            <p>Here are some things that I've worked on recently:</p>
+
+            <p>I also write blog posts about random things that I learned or tried out recently. They're mostly Web stuff. If you're interested to read some of them, you can do so at <a href="http://blog.arnellebalane.com/" target="_blank" rel="noopener">my blog</a>.</p>
+
+            <p>Here's the last thing I posted on my blog:</p>
+
+            <blockquote cite="https://blog.arnellebalane.com/the-web-share-api-2cbb3e6cf007">
+                The Web Share API
+                <time>April 5, 2017</time>
+            </blockquote>
+
+            <p>Occasionally, I give talks and do workshops about Web-related technologies, like Javascript or Progressive Web Apps. You can find slides to my previous talks in <a href="https://speakerdeck.com/arnellebalane" target="_blank" rel="noopenter">Speaker Deck</a>.</p>
+
+            <p>Supposedly this paragraph will tell you about my upcoming talk, but I don't have one at the moment.</p>
+
+            <p>Here are other links that you might be interested in (they all lead to me):
+                <a href="https://stackoverflow.com/users/story/1343333" target="_blank" rel="noopener">Stackoverflow</a>,
+                <a href="https://www.linkedin.com/in/arnellebalane/" target="_blank" rel="noopener">LinkedIn</a>,
+                <a href="https://twitter.com/arnellebalane" target="_blank" rel="noopener">Twitter</a>.
+            </p>
+
+            <p>If there's anything that you would like to tell me, you can email me at <a href="mailto:arnellebalane@gmail.com">arnellebalane@gmail.com</a>.</p>
+
+            <p>Oh and by the way, this is what I look like:</p>
         </main>
     </body>
 </html>
