--- a/views/index.html
+++ b/views/index.html
@@ -22,16 +22,16 @@
 
             <p>Here are some things that I've worked on recently:</p>
 
-            <p>I also write blog posts about random things that I learned or tried out recently. They're mostly Web stuff. If you're interested to read some of them, you can do so at <a href="http://blog.arnellebalane.com/" target="_blank" rel="noopener">my blog</a>.</p>
+            <p>I also write blog posts about random things that I learned or tried out recently. They're mostly Web stuff. If you're interested in reading some of them, you can do so at <a href="http://blog.arnellebalane.com/" target="_blank" rel="noopener">my blog</a>.</p>
 
-            <p>Here's the last thing I posted on my blog:</p>
+            <p>This is the last thing that I posted in there:</p>
 
             <blockquote cite="https://blog.arnellebalane.com/the-web-share-api-2cbb3e6cf007">
                 The Web Share API
                 <time>April 5, 2017</time>
             </blockquote>
 
-            <p>Occasionally, I give talks and do workshops about Web-related technologies, like Javascript or Progressive Web Apps. You can find slides to my previous talks in <a href="https://speakerdeck.com/arnellebalane" target="_blank" rel="noopenter">Speaker Deck</a>.</p>
+            <p>Occasionally, I give talks and do workshops about Web-related technologies, like Javascript or Progressive Web Apps. You can find slides I used for my previous talks in <a href="https://speakerdeck.com/arnellebalane" target="_blank" rel="noopenter">Speaker Deck</a>.</p>
 
             <p>Supposedly this paragraph will tell you about my upcoming talk, but I don't have one at the moment.</p>
 
