--- a/views/index.html
+++ b/views/index.html
@@ -22,6 +22,26 @@
 
             <p>Here are some things that I've worked on recently:</p>
 
+            <ol class="projects">
+                <li>
+                    <a class="project github" href="#">
+                        <p class="name">arcus</p>
+                        <p class="description">server-sent events (sse) module for nodejs</p>
+                    </a>
+                </li>
+                <li>
+                    <a class="project github" href="#">
+                        <p class="name">hermes</p>
+                        <p class="description">client-side messaging channel for sending data from one browser tab to another</p>
+                    </a>
+                </li>
+                <li>
+                    <a class="project codepen" href="#">
+                        <p class="name">Yummy Food App</p>
+                    </a>
+                </li>
+            </ol>
+
             <p>I also write blog posts about random things that I learned or tried out recently. They're mostly Web stuff. If you're interested in reading some of them, you can do so at <a href="http://blog.arnellebalane.com/" target="_blank" rel="noopener">my blog</a>.</p>
 
             <p>This is the last thing that I posted in there:</p>
