add Open Sans Light webfont

--- a/static/stylesheets/fonts.css
+++ b/static/stylesheets/fonts.css
@@ -5,6 +5,12 @@
 
 @font-face {
     font-family: "Open Sans";
+    font-weight: 300;
+    src: url("../fonts/OpenSansLight.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Open Sans";
     font-weight: 400;
     src: url("../fonts/OpenSansRegular.ttf") format("truetype");
 }
