--- a/views/index.html
+++ b/views/index.html
@@ -24,34 +24,38 @@
 
             <ol class="projects">
                 <li>
-                    <a class="project github" href="#">
+                    <a class="project github" href="https://github.com/arnellebalane/arcus" target="_blank" rel="noopener">
                         <p class="name">arcus</p>
                         <p class="description">server-sent events (sse) module for nodejs</p>
                     </a>
                 </li>
                 <li>
-                    <a class="project github" href="#">
+                    <a class="project github" href="https://github.com/arnellebalane/hermes" target="_blank" rel="noopener">
                         <p class="name">hermes</p>
                         <p class="description">client-side messaging channel for sending data from one browser tab to another</p>
                     </a>
                 </li>
                 <li>
-                    <a class="project codepen" href="#">
+                    <a class="project codepen" href="https://codepen.io/arnellebalane/pen/BRxgBj" target="_blank" rel="noopener">
                         <p class="name">Yummy Food App</p>
                     </a>
                 </li>
             </ol>
+
+            <div class="separator"></div>
 
             <p>I also write blog posts about random things that I learned or tried out recently. They're mostly Web stuff. If you're interested in reading some of them, you can do so at <a href="http://blog.arnellebalane.com/" target="_blank" rel="noopener">my blog</a>.</p>
 
             <p>This is the last thing that I posted in there:</p>
 
             <blockquote cite="https://blog.arnellebalane.com/the-web-share-api-2cbb3e6cf007">
-                The Web Share API
+                <a href="https://blog.arnellebalane.com/the-web-share-api-2cbb3e6cf007" target="_blank" rel="noopener">The Web Share API.</a>
                 <time>April 5, 2017</time>
             </blockquote>
 
-            <p>Occasionally, I give talks and do workshops about Web-related technologies, like Javascript or Progressive Web Apps. You can find slides I used for my previous talks in <a href="https://speakerdeck.com/arnellebalane" target="_blank" rel="noopenter">Speaker Deck</a>.</p>
+            <div class="separator"></div>
+
+            <p>Occasionally, I give talks and do workshops about Web-related technologies like Javascript, Firebase, or Progressive Web Apps. You can find slides I used for my previous talks in <a href="https://speakerdeck.com/arnellebalane" target="_blank" rel="noopenter">Speaker Deck</a>.</p>
 
             <p>Supposedly this paragraph will tell you about my upcoming talk, but I don't have one at the moment.</p>
 
