styles for talk section

--- a/views/index.html
+++ b/views/index.html
@@ -49,7 +49,7 @@
             <p>This is the last thing that I posted in there:</p>
 
             <blockquote cite="https://blog.arnellebalane.com/the-web-share-api-2cbb3e6cf007">
-                <a href="https://blog.arnellebalane.com/the-web-share-api-2cbb3e6cf007" target="_blank" rel="noopener">The Web Share API.</a>
+                <a href="https://blog.arnellebalane.com/the-web-share-api-2cbb3e6cf007" target="_blank" rel="noopener">The Web Share API</a>
                 <time>April 5, 2017</time>
             </blockquote>
 
@@ -57,7 +57,9 @@
 
             <p>Occasionally, I give talks and do workshops about Web-related technologies like Javascript, Firebase, or Progressive Web Apps. You can find slides I used for my previous talks in <a href="https://speakerdeck.com/arnellebalane" target="_blank" rel="noopenter">Speaker Deck</a>.</p>
 
-            <p>Supposedly this paragraph will tell you about my upcoming talk, but I don't have one at the moment.</p>
+            <p class="no-talk">Supposedly this paragraph will tell you about my upcoming talk, but I don't have one at the moment.</p>
+
+            <div class="separator"></div>
 
             <p>Here are other links that you might be interested in (they all lead to me):
                 <a href="https://stackoverflow.com/users/story/1343333" target="_blank" rel="noopener">Stackoverflow</a>,
@@ -66,6 +68,8 @@
             </p>
 
             <p>If there's anything that you would like to tell me, you can email me at <a href="mailto:arnellebalane@gmail.com">arnellebalane@gmail.com</a>.</p>
+
+            <div class="separator"></div>
 
             <p>Oh and by the way, this is what I look like:</p>
         </main>
