--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -155,3 +155,12 @@ blockquote time {
     margin-top: 0.75em;
     font-size: 0.8em;
 }
+
+
+/** Talk **/
+
+.no-talk {
+    padding: 0 8rem;
+    font-size: 0.8em;
+    text-align: center;
+}
