--- a/views/index.html
+++ b/views/index.html
@@ -71,7 +71,9 @@
 
             <div class="separator"></div>
 
-            <p>Oh and by the way, this is what I look like:</p>
+            <p class="avatar-label">Oh and by the way, this is what I look like:</p>
+
+            <img class="avatar" src="static/images/avatar.png" alt="Arnelle Balane">
         </main>
     </body>
 </html>
