--- a/views/index.html
+++ b/views/index.html
@@ -62,7 +62,7 @@
             <div class="separator"></div>
 
             <p>Here are other links that you might be interested in (they all lead to me):
-                <a href="https://stackoverflow.com/users/story/1343333" target="_blank" rel="noopener">Stackoverflow</a>,
+                <a href="https://stackoverflow.com/users/story/1343333" target="_blank" rel="noopener">StackOverflow</a>,
                 <a href="https://www.linkedin.com/in/arnellebalane/" target="_blank" rel="noopener">LinkedIn</a>,
                 <a href="https://twitter.com/arnellebalane" target="_blank" rel="noopener">Twitter</a>.
             </p>
