update recent projects content

--- a/views/index.html
+++ b/views/index.html
@@ -18,26 +18,27 @@
                 <p>I'm just another Web Developer</p>
             </header>
 
-            <p>Just like other developers, I write code. They're all scattered across the Internet, but you can find most of the cool ones in my <a href="https://github.com/arnellebalane" target="_blank" rel="noopener">Github profile</a>. Some of them are also in <a href="https://codepen.io/arnellebalane/" target="_blank" rel="noopener">Codepen</a>, and even on <a href="#">this site</a>.</p>
+            <p>Just like other developers, I write code. They're all scattered across the Internet, but you can find most of the cool ones in my <a href="https://github.com/arnellebalane" target="_blank" rel="noopener">Github profile</a>. Some of them are also in <a href="https://codepen.io/arnellebalane/" target="_blank" rel="noopener">Codepen</a>.</p>
 
             <p>Here are some things that I've worked on recently:</p>
 
             <ol class="projects">
                 <li>
+                    <a class="project github" href="https://github.com/arnellebalane/shape-detection-demo" target="_blank" rel="noopener">
+                        <p class="name">shape-detection-demo</p>
+                        <p class="description">Shape Detection API Demo Application</p>
+                    </a>
+                </li>
+                <li>
                     <a class="project github" href="https://github.com/arnellebalane/arcus" target="_blank" rel="noopener">
                         <p class="name">arcus</p>
-                        <p class="description">server-sent events (sse) module for nodejs</p>
+                        <p class="description">Server-Sent Events (SSE) module for NodeJS</p>
                     </a>
                 </li>
                 <li>
                     <a class="project github" href="https://github.com/arnellebalane/hermes" target="_blank" rel="noopener">
                         <p class="name">hermes</p>
                         <p class="description">client-side messaging channel for sending data from one browser tab to another</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="project codepen" href="https://codepen.io/arnellebalane/pen/BRxgBj" target="_blank" rel="noopener">
-                        <p class="name">Yummy Food App</p>
                     </a>
                 </li>
             </ol>
