--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,7 @@
 
         <title>Arnelle Balane</title>
 
+        <link rel="manifest" href="static/manifest.json">
         <link rel="stylesheet" href="static/stylesheets/fonts.css">
         <link rel="stylesheet" href="static/stylesheets/main.css">
     </head>
