cache assets with service worker

--- a/views/index.html
+++ b/views/index.html
@@ -78,5 +78,7 @@
 
             <img class="avatar" src="static/images/avatar.png" alt="Arnelle Balane">
         </main>
+
+        <script src="static/javascripts/main.js"></script>
     </body>
 </html>
