add google analytis tracking

--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,8 @@
     </head>
 
     <body>
+        {% include 'partials/analytics.html' %}
+
         <main class="wrapper">
             <header class="site-header">
                 <p>Hello, my name is</p>
