update narrative content

--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,9 @@
                 <p>I'm just another Web Developer</p>
             </header>
 
-            <p>Just like other developers, I write code. They're all scattered across the Internet, but you can find most of the cool ones in my <a href="https://github.com/arnellebalane" target="_blank" rel="noopener">Github profile</a>. Some of them are also in <a href="https://codepen.io/arnellebalane/" target="_blank" rel="noopener">Codepen</a>.</p>
+            <p>Just like other developers, I write code. They're all scattered across the Internet, but you can find most of the cool ones in my <a href="https://github.com/arnellebalane" target="_blank" rel="noopener">Github</a> profile. I love Javascript and the Web, so you'll see mostly Web-related projects where I build awesome things with different Web APIs and other tech.</p>
+
+            <p>I also do frontend work, as you'll see in my <a href="https://codepen.io/arnellebalane" target="_blank" rel="noopener">Codepen</a> profile. If you want to know how I built those, you can check out my live streams and videos over at my <a href="https://www.youtube.com/channel/UC3-k6RL1rVSXzHI8IU7u3NA" target="_blank" rel="noopener">Youtube</a> and <a href="http://liveedu.tv/arnellebalane/" target="_blank" rel="noopener">LiveEdu.tv</a> channels.</p>
 
             <p>Here are some things that I've worked on recently:</p>
 
