update recent projects and blog post

--- a/views/index.html
+++ b/views/index.html
@@ -30,15 +30,15 @@
 
             <ol class="projects">
                 <li>
-                    <a class="project github" href="https://github.com/arnellebalane/shape-detection-demo" target="_blank" rel="noopener">
-                        <p class="name">shape-detection-demo</p>
-                        <p class="description">Shape Detection API Demo Application</p>
+                    <a class="project github" href="https://github.com/arnellebalane/notifications-audio-player" target="_blank" rel="noopener">
+                        <p class="name">notifications-audio-player</p>
+                        <p class="description">Experiment application on showing audio visualizations via notifications</p>
                     </a>
                 </li>
                 <li>
-                    <a class="project github" href="https://github.com/arnellebalane/arcus" target="_blank" rel="noopener">
-                        <p class="name">arcus</p>
-                        <p class="description">Server-Sent Events (SSE) module for NodeJS</p>
+                    <a class="project github" href="https://github.com/arnellebalane/shape-detection-demo" target="_blank" rel="noopener">
+                        <p class="name">shape-detection-demo</p>
+                        <p class="description">Shape Detection API Demo Application</p>
                     </a>
                 </li>
                 <li>
@@ -55,9 +55,11 @@
 
             <p>This is the last thing that I posted in there:</p>
 
-            <blockquote cite="https://blog.arnellebalane.com/the-web-share-api-2cbb3e6cf007">
-                <a href="https://blog.arnellebalane.com/the-web-share-api-2cbb3e6cf007" target="_blank" rel="noopener">The Web Share API</a>
-                <time>April 5, 2017</time>
+            <blockquote cite="https://blog.arnellebalane.com/introduction-to-the-shape-detection-api-e07425396861">
+                <a href="https://blog.arnellebalane.com/introduction-to-the-shape-detection-api-e07425396861" target="_blank" rel="noopener">
+                    Introduction to the Shape Detection API
+                </a>
+                <time>July 3, 2017</time>
             </blockquote>
 
             <div class="separator"></div>
