inline critical css and dynamically load stylesheets

--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,32 @@
         <title>Arnelle Balane</title>
 
         <link rel="manifest" href="static/manifest.json">
-        <link rel="stylesheet" href="static/stylesheets/fonts.css">
-        <link rel="stylesheet" href="static/stylesheets/main.css">
+        <style>
+            html {
+                font-size: 62.5%;
+            }
+
+            body {
+                font-family: sans-serif;
+                font-size: 1.6rem;
+            }
+
+            .wrapper {
+                width: calc(100vw - 6rem);
+                max-width: 60rem;
+                padding-bottom: 8rem;
+                margin: 0 auto;
+            }
+
+            .site-header {
+                padding: 8rem 0;
+                text-align: center;
+            }
+
+            .title {
+                font-size: 2.4em;
+            }
+        </style>
     </head>
 
     <body>
