--- a/views/index.html
+++ b/views/index.html
@@ -106,7 +106,7 @@
 
             <p class="avatar-label">Oh and by the way, this is what I look like:</p>
 
-            <img class="avatar" src="static/images/avatar.png" alt="Arnelle Balane">
+            <img class="avatar" src="static/images/avatar.webp" alt="Arnelle Balane">
         </main>
 
         <script src="static/javascripts/main.js"></script>
